--- a/RedBox/Index.html
+++ b/RedBox/Index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8"/>
-    <title>Evaluation</title>
+    <title>Redbox</title>
     <link href="Content/bootstrap.min.css" rel="stylesheet"/>
     <link href="Content/select.min.css" rel="stylesheet"/>
     <link href="Content/Main.css" rel="stylesheet"/>
@@ -43,8 +43,11 @@
             </nav>
         </header>
         <!--MOVE ME IN A VIEW THINGY-->
-        <div>
+        <div class="container">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Type your idea"></textarea>
         </div>
+        <!--END MOVE ME IN A VIEW THINGY-->
+
         <div class="max-div" ng-view></div>
         <script src="Scripts/jquery-2.1.4.min.js"></script>
         <script src="Scripts/angular.min.js"></script>
