--- a/RedBox/Index.html
+++ b/RedBox/Index.html
@@ -25,8 +25,8 @@
                 <div class="changer">
                     <div></div>
                     <ul>
-                        <li><a href="http://www2.techromix.com:85">Timesheet</a></li>
-                        <li><a href="http://www2.techromix.com:1006">Evaluation</a></li>
+                        <li><a href="http://localhost:58902/">Timesheet</a></li>
+                        <li><a href="http://localhost:61503">Evaluation</a></li>
                         <li class="active"><a href="http://www2.techromix.com:85">Redbox</a></li>
                         <li><a href="http://blog.techromix.com">Blog</a></li>
                         <li><a target="_blank" href="https://sites.google.com/a/techromix.com/internal-site/">Google Site <span class="fa fa-external-link"></span></a></li>
@@ -51,14 +51,14 @@
         <script src="Scripts/jquery-2.2.0.min.js"></script>
         <script src="Scripts/angular.js"></script>
         <script src="Scripts/angular-sanitize.js"></script>
-        <!--<script src="Scripts/angular-local-storage.min.js"></script>-->
+       
         <script src="Scripts/angular-route.js"></script>
         <script src="Scripts/angular-animate.js"></script>
         <script src="Scripts/angular-aria.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
 
-
+        <script src="Scripts/angular-local-storage.js"></script>
         <script src="Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
         <!--<script src="Scripts/angular-toastr.tpls.min.js"></script>
         <script src="Scripts/select.js"></script>-->
@@ -67,6 +67,7 @@
         <script src="Scripts/clickoutside.directive.js"></script>-->
         <script src="app/external/underscoreModule.js"></script>
         <script src="app/services/appRouter.js"></script>
+        <script src="app/services/authentification.js"></script>
         <script src="app/controllers/mainController.js"></script>
         <script src="app/controllers/suggestionsController.js"></script>
 
