--- a/RedBox/Index.html
+++ b/RedBox/Index.html
@@ -41,7 +41,7 @@
             </div>
             <nav>
                 <ul class="nav nav-tabs" role="tablist">
-                    <li role="presentation" ng-class="{'active': isTabActive('SelfEvaluation')}" ng-hide="hideSelfEvaluation"><a href="#SelfEvaluation">Suggestions</a></li>
+                    <li role="presentation" ng-class="{'active': isTabActive('Suggestions')}" ng-hide="hideSelfEvaluation"><a href="#Suggestions">Suggestions</a></li>
                     <li role="presentation" ng-class="{'active': isTabActive('EOM')}"><a href="#EOM">EOM</a></li>
                 </ul>
             </nav>
