--- a/RedBox/Index.html
+++ b/RedBox/Index.html
@@ -66,6 +66,7 @@
         <script src="Scripts/clickoutside.directive.js"></script>-->
         <script src="app/external/underscoreModule.js"></script>
         <script src="app/services/appRouter.js"></script>
+        <script src="app/services/authInterceptorService.js"></script>
         <script src="app/services/authentification.js"></script>
         <script src="app/controllers/mainController.js"></script>
         <script src="app/controllers/suggestionsController.js"></script>
