--- a/RedBox/Index.html
+++ b/RedBox/Index.html
@@ -79,6 +79,7 @@
         <script src="app/controllers/mainController.js"></script>
         <script src="app/controllers/suggestionsController.js"></script>
         <script src="app/controllers/eomController.js"></script>
+        <script src="app/services/suggestionService.js"></script>
 
         <script>
             $(".changer").mouseenter(function () {
