--- a/RedBox/Index.html
+++ b/RedBox/Index.html
@@ -73,9 +73,12 @@
         <script src="Scripts/underscore.min.js"></script>
         <!--<script src="Scripts/ngDraggable.js"></script>
         <script src="Scripts/clickoutside.directive.js"></script>-->
-        <script src="app/external/underscoreModule.js"></script>
+
         <script src="app/services/appRouter.js"></script>
         <script src="app/services/authentification.js"></script>
+        <script src="app/services/userService.js"></script>
+        <script src="app/services/eomService.js"></script>
+
         <script src="app/controllers/mainController.js"></script>
         <script src="app/controllers/suggestionsController.js"></script>
         <script src="app/controllers/eomController.js"></script>
