--- a/RedBox/Index.html
+++ b/RedBox/Index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Redbox</title>
     <link href="Content/bootstrap.min.css" rel="stylesheet"/>
     <link href="Content/select.min.css" rel="stylesheet"/>
