--- a/RedBox/Index.html
+++ b/RedBox/Index.html
@@ -36,7 +36,7 @@
             <div class="changer">
                 <div></div>
                 <ul>
-                    <li class="user-status"><span>Welcome <strong>{{currentUser.userName}}</strong> !</li>
+                    <li class="user-status"><span>Welcome <strong>{{currentUser.fullName}}</strong> !</span></li>
                     <li><a href="http://localhost:58902">Timesheet</a></li>
                     <li class="active"><a href="http://locahost:53047">Redbox</a></li>
                     <li><a href="http://192.168.1.57:2017">Evaluation</a></li>
@@ -48,7 +48,7 @@
             </div>
             <h1>Redbox</h1>
             <div class="col-md-8 no-padding text-right logged" ng-show="isLogged()">
-                <span>Welcome <strong>{{currentUser.userName}}</strong> !</span>&nbsp;<a ng-click="logOut()">logout</a>
+                <span>Welcome <strong>{{currentUser.fullName}}</strong> !</span>&nbsp;<a ng-click="logOut()">logout</a>
             </div>
         </div>
         <nav>
