--- a/RedBox/Index.html
+++ b/RedBox/Index.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Redbox</title>
-    <link href="Content/bootstrap.min.css" rel="stylesheet"/>
-    <link href="Content/select.min.css" rel="stylesheet"/>
-    <link href="Content/Main.css" rel="stylesheet"/>
-    <link href="Content/angular-toastr.min.css" rel="stylesheet"/>
+    <link href="Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="Content/select.min.css" rel="stylesheet" />
+    <link href="Content/Main.css" rel="stylesheet" />
+    <link href="Content/angular-toastr.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="Content/select.min.css" rel="stylesheet" />
@@ -21,14 +21,16 @@
 
 <body ng-app="myApp" ng-cloak>
 <div class="wrapper" ng-controller="mainController">
+    
     <div class="login" ng-hide="isLogged()">
-            <div class="login-div checking" ng-cloak>
-        <div class="login-header md-toolbar md-default-theme">
-            <div class="logging-in">
-              <div class="indeterminate"><img src="Content/Images/login-bg.png"></div>
+        <div class="login-div checking" ng-cloak>
+            <div class="login-header md-toolbar md-default-theme">
+                <div class="logging-in">
+                    <div class="indeterminate"><img src="Content/Images/login-bg.png">
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
     </div>
 
     <header ng-show="isLogged()" class="ng-hide" ng-cloak>
@@ -59,48 +61,56 @@
             </ul>
         </nav>
     </header>
-        <div ng-show="isLogged()" ng-cloak ng-view></div>
-    </div>
-    <div class="clearfix"></div>
+    <md-progress-linear md-mode="indeterminate" ng-show="showLoading"></md-progress-linear>
+    <div ng-show="isLogged()" ng-cloak ng-view></div>
+</div>
+<div class="clearfix"></div>
 
-        <script src="Scripts/jquery-2.2.0.min.js"></script>
-        <script src="Scripts/angular.js"></script>
-        <script src="Scripts/angular-sanitize.js"></script>
-       
-        <script src="Scripts/angular-route.js"></script>
-        <script src="Scripts/angular-animate.js"></script>
-        <script src="Scripts/angular-aria.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+<script>
+    var ssoBaseUrl = "http://localhost:58902/";
+    window.ssoLoginUrl = ssoBaseUrl + '/Account/Login.aspx?ReturnUrl=';
+    window.ssoLogoutUrl = ssoBaseUrl + '/Account/LogOut.aspx'; 
+</script>
 
-        <script src="Scripts/angular-local-storage.js"></script>
-        <script src="Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
-        <!--<script src="Scripts/angular-toastr.tpls.min.js"></script>
-        <script src="Scripts/select.js"></script>-->
-        <script src="Scripts/underscore.min.js"></script>
-        <!--<script src="Scripts/ngDraggable.js"></script>
-        <script src="Scripts/clickoutside.directive.js"></script>-->
+<script src="Scripts/jquery-2.2.0.min.js"></script>
+    <script src="Scripts/angular.js"></script>
+    <script src="Scripts/angular-sanitize.js"></script>
 
-        <script src="app/services/appRouter.js"></script>
+    <script src="Scripts/angular-route.js"></script>
+    <script src="Scripts/angular-animate.js"></script>
+    <script src="Scripts/angular-aria.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+
+    <script src="Scripts/angular-local-storage.js"></script>
+    <script src="Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
+    <!--<script src="Scripts/angular-toastr.tpls.min.js"></script>
+    <script src="Scripts/select.js"></script>-->
+    <script src="Scripts/underscore.min.js"></script>
+    <!--<script src="Scripts/ngDraggable.js"></script>
+    <script src="Scripts/clickoutside.directive.js"></script>-->
+
+    <script src="app/services/appRouter.js"></script>
     <script src="app/services/authInterceptorService.js"></script>
-        <script src="app/services/authentification.js"></script>
-        <script src="app/services/userService.js"></script>
-        <script src="app/services/eomService.js"></script>
-        <script src="app/services/eventService.js"></script>
-        <script src="app/services/suggestionService.js"></script>
+    <script src="app/services/authentification.js"></script>
+    <script src="app/services/userService.js"></script>
+    <script src="app/services/eomService.js"></script>
+    <script src="app/services/eventService.js"></script>
+    <script src="app/services/suggestionService.js"></script>
 
-        <script src="app/controllers/mainController.js"></script>
-        <script src="app/controllers/suggestionsController.js"></script>
-        <script src="app/controllers/eomController.js"></script>
+    <script src="app/controllers/mainController.js"></script>
+    <script src="app/controllers/suggestionsController.js"></script>
+    <script src="app/controllers/eomController.js"></script>
     <script src="app/controllers/eventsController.js"></script>
 
-        <script>
-        $(".changer").mouseenter(function() {
-                $(this).addClass("open");
-            });
-        $(".changer").mouseleave(function() {
-                $(this).removeClass("open");
-            });
-        </script>
+<script>
+    $(".changer").mouseenter(function() {
+        $(this).addClass("open");
+    });
+    $(".changer").mouseleave(function() {
+        $(this).removeClass("open");
+    });
+</script>
+
 </body>
 </html>
