--- a/RedBox/Index.html
+++ b/RedBox/Index.html
@@ -39,9 +39,9 @@
                 <div></div>
                 <ul>
                     <li class="user-status"><span>Welcome <strong>{{currentUser.userName}}</strong> !</li>
-                    <li><a href="http://192.168.1.57:2016">Timesheet</a></li>
-                    <li class="active"><a href="http://locahost:53047">Redbox</a></li>
-                    <li><a href="http://192.168.1.57:2017">Evaluation</a></li>
+                    <li><a href="http://www2.techromix.com:85/">Timesheet</a></li>
+                    <li class="active"><a href="http://www2.techromix.com:1007/">Redbox</a></li>
+                    <li ><a href="http://www2.techromix.com:1006/">Evaluation</a></li>
                     <li><a href="http://blog.techromix.com">Blog</a></li>
                     <li><a target="_blank" href="https://sites.google.com/a/techromix.com/internal-site/">Google Site <span class="fa fa-external-link"></span></a></li>
                     <li><a target="_blank" href="https://sites.google.com/a/techromix.com/dev/">Dev Team <span class="fa fa-external-link"></span></a></li>
