--- a/RedBox/Index.html
+++ b/RedBox/Index.html
@@ -38,7 +38,7 @@
             <div class="changer">
                 <div></div>
                 <ul>
-                    <li class="user-status"><span>Welcome <strong>{{currentUser.userName}}</strong> !</li>
+                    <li class="user-status"><span>Welcome <strong>{{currentUser.userName}}</strong> ! </span></li>
                     <li><a href="http://www2.techromix.com:85/">Timesheet</a></li>
                     <li class="active"><a href="http://www2.techromix.com:1007/">Redbox</a></li>
                     <li ><a href="http://www2.techromix.com:1006/">Evaluation</a></li>
@@ -67,7 +67,7 @@
 <div class="clearfix"></div>
 
 <script>
-    var ssoBaseUrl = "http://localhost:58902/";
+    var ssoBaseUrl = "http://www2.techromix.com:85/";
     window.ssoLoginUrl = ssoBaseUrl + '/Account/Login.aspx?ReturnUrl=';
     window.ssoLogoutUrl = ssoBaseUrl + '/Account/LogOut.aspx'; 
 </script>
