added Jira and Confluence links

--- a/RedBox/Index.html
+++ b/RedBox/Index.html
@@ -44,6 +44,8 @@
                         <ul>
                             <li class="user-status"><span><strong>{{currentUser.fullName}}</strong></span></li>
                             <li><a href="http://localhost:2016/">Timesheet</a></li>
+                            <li><a href="https://techromix.atlassian.net">Jira</a></li>
+                            <li><a href="https://techromix.atlassian.net/wiki/">Confluence</a></li>
                             <li class="active"><a href="http://www2.techromix.com:1007/">Redbox</a></li>
                             <li><a href="http://www2.techromix.com:1006/">Evaluation</a></li>
                             <li><a href="http://blog.techromix.com">Blog</a></li>
