added angular toastr

--- a/RedBox/Index.html
+++ b/RedBox/Index.html
@@ -89,7 +89,9 @@
     <script src="Scripts/angular-animate.js"></script>
     <script src="Scripts/angular-aria.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+
+    <script src="Scripts/angular-toastr.tpls.min.js"></script>
 
     <script src="Scripts/angular-local-storage.js"></script>
     <script src="Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
