--- a/RedBox/Index.html
+++ b/RedBox/Index.html
@@ -16,7 +16,13 @@
     <link rel="icon" href="/favicon.png" type="image/png">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link href="Content/loader.css" rel="stylesheet" />
+    <link href="Content/loader.css" rel="stylesheet"/>
+
+    <script type="text/javascript">
+        if (window.location.href.indexOf("www2.techromix.com") !== -1 || window.location.href.indexOf("tmx:") !== -1) {
+            window.location.href = "http://redbox.techromix.com";
+        }
+    </script>
 </head>
 
 <body ng-app="myApp" ng-cloak>
@@ -43,11 +49,11 @@
                         <div></div>
                         <ul>
                             <li class="user-status"><span><strong>{{currentUser.fullName}}</strong></span></li>
-                            <li><a href="http://localhost:2016/">Timesheet</a></li>
+                            <li><a href="http://timesheet.techromix.com/">Timesheet</a></li>
                             <li><a href="https://techromix.atlassian.net">Jira</a></li>
                             <li><a href="https://techromix.atlassian.net/wiki/">Confluence</a></li>
-                            <li class="active"><a href="http://www2.techromix.com:1007/">Redbox</a></li>
-                            <li><a href="http://www2.techromix.com:1006/">Evaluation</a></li>
+                            <li class="active"><a href="https://redbox.techromix.net">Redbox</a></li>
+                            <li><a href="http://evaluation.techromix.com/">Evaluation</a></li>
                             <li><a href="http://blog.techromix.com">Blog</a></li>
                             <li><a target="_blank" href="https://sites.google.com/a/techromix.com/internal-site/">Google Site <span class="fa fa-external-link"></span></a></li>
                             <li><a target="_blank" href="https://sites.google.com/a/techromix.com/dev/">Dev Team <span class="fa fa-external-link"></span></a></li>
@@ -76,7 +82,7 @@
     </div>
     <div class="clearfix"></div>
     <script>
-        var ssoBaseUrl = "http://localhost:2016/";
+        var ssoBaseUrl = "http://timesheet.techromix.com/";
         window.ssoLoginUrl = ssoBaseUrl + '/Account/Login.aspx?ReturnUrl=';
         window.ssoLogoutUrl = ssoBaseUrl + '/Account/LogOut.aspx';
     </script>
